--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -176,6 +176,7 @@ jobs:
           # CONFIG_PACKAGE_ipv6helper is not set
           CONFIG_PACKAGE_odhcp6c=y
           CONFIG_PACKAGE_odhcpd-ipv6only=y
+          CONFIG_PACKAGE_iptables-mod-nat-extra=y
 
           # 文件系统支持:
           CONFIG_PACKAGE_block-mount=y
