--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b openwrt-24.10 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
+          git clone -b master --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
 
       - name: 修改部分patch文件
@@ -192,6 +192,7 @@ jobs:
           CONFIG_PACKAGE_odhcpd-ipv6only=y
 
           # 文件系统支持:
+          # CONFIG_USE_APK is not set
           CONFIG_PACKAGE_block-mount=y
           CONFIG_PACKAGE_kmod-fs-exfat=y
           CONFIG_PACKAGE_kmod-fs-ext4=y
@@ -209,10 +210,11 @@ jobs:
           CONFIG_PACKAGE_default-settings-chn=y
 
           # 常用LuCI插件选择:
+          # CONFIG_PACKAGE_luci-app-attendedsysupgrade is not set
           # CONFIG_PACKAGE_luci-app-cpufreq is not set
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-package-manager=y
-          CONFIG_PACKAGE_luci-app-samba4=y
+          CONFIG_PACKAGE_luci-app-ksmbd=y
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-ssr-plus_Iptables_Transparent_Proxy=y
           CONFIG_PACKAGE_luci-app-ssr-plus_Iptables_Transparent_Proxy=y
