--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -232,6 +232,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-ttyd=y
 
           # 常用软件包:
+          # CONFIG_PACKAGE_attendedsysupgrade-common is not set
           CONFIG_PACKAGE_adguardhome=y
           CONFIG_PACKAGE_autocore=y
           CONFIG_PACKAGE_btop=y
