--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -95,6 +95,7 @@ jobs:
           rm -rf dns2socks
           rm -rf dns2tcp
           rm -rf dnsproxy
+          rm -rf geoview
           rm -rf hysteria
           rm -rf ipt2socks
           rm -rf microsocks
@@ -104,6 +105,7 @@ jobs:
           rm -rf shadowsocks-rust
           rm -rf shadowsocksr-libev
           rm -rf simple-obfs
+          rm -rf sing-box
           rm -rf smartdns
           rm -rf ssocks
           rm -rf tcping
@@ -206,7 +208,6 @@ jobs:
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-package-manager=y
           CONFIG_PACKAGE_luci-app-ksmbd=y
-          CONFIG_PACKAGE_luci-app-passwall=y
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-ssr-plus_Iptables_Transparent_Proxy=y
           CONFIG_PACKAGE_luci-app-ssr-plus_Iptables_Transparent_Proxy=y
@@ -232,7 +233,6 @@ jobs:
           CONFIG_PACKAGE_luci-app-ttyd=y
 
           # 常用软件包:
-          # CONFIG_PACKAGE_attendedsysupgrade-common is not set
           CONFIG_PACKAGE_adguardhome=y
           CONFIG_PACKAGE_autocore=y
           CONFIG_PACKAGE_btop=y
