--- a/.github/workflows/immssr.yml
+++ b/.github/workflows/immssr.yml
@@ -206,6 +206,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-package-manager=y
           CONFIG_PACKAGE_luci-app-samba4=y
+          CONFIG_PACKAGE_luci-app-smartdns=y
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-ssr-plus_Iptables_Transparent_Proxy=y
           CONFIG_PACKAGE_luci-app-ssr-plus_Iptables_Transparent_Proxy=y
@@ -233,6 +234,7 @@ jobs:
 
           # 常用软件包:
           CONFIG_PACKAGE_adguardhome=y
+          CONFIG_PACKAGE_smartdns-ui=y
           CONFIG_PACKAGE_autocore=y
           CONFIG_PACKAGE_btop=y
           CONFIG_PACKAGE_unzip=y
